--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -7,8 +7,10 @@
     padding-top: 5%;
     gap: 50px;
     background-color:#F6F6F6;
-
     margin-left: 10%;
+    border-radius: 30px;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 .contenerCard{
@@ -24,7 +26,16 @@
    top: 0px;
    border-radius: 10px;
    object-fit: cover;
+   mix-blend-mode: darken;
+   filter: brightness(85%);
 }
+
+.imgCover:hover{
+   box-shadow: 1px 1px 12px #ff6060;
+   transition: 0.5s;
+}
+
+
 
 .titleCover{
      color: white;
