--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -10,7 +10,7 @@
 .TitleContener{
    background-color: #ff6060;
    border-radius: 10px;
-  
+
    
 }
 
@@ -18,7 +18,7 @@
     margin:0;
     display: flex;
     justify-content: space-between;
-    width:90%;
+    width:93%;
     color: #f1f1f1;
     font-family: Montserrat;
     font-size: 18px;
@@ -27,7 +27,7 @@
     letter-spacing: 0em;
     text-align: left;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 4%;
     border-radius:10px;
 
     
@@ -41,7 +41,7 @@
     from { max-height: 0; }
     to { max-height: 500px; }
   }
-.descript{
+  .descript{
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 400;
@@ -56,5 +56,19 @@
     animation: expand 1s ease-in-out;
     overflow: hidden;
     list-style-type: none;
+    background-color: #f1f1f1;
 }
 
+.WrapAbout{
+    padding-left: 10%;
+    padding-right: 10%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+     
+}
+.ContenerAbout{
+    background-color: #f1f1f1;
+    border-radius: 10px 10px 0px 0px;
+}
