--- a/src/pages/Accomodation/Accomodation.module.css
+++ b/src/pages/Accomodation/Accomodation.module.css
@@ -8,10 +8,8 @@
 }
 
 .conteneurWrap{
+    width: 80%;
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-around;
 }
 
 .cartier{
@@ -42,4 +40,13 @@
     flex-direction: row;
     background-color: #f6f6f6;
    
+}
+
+.wrapGauche{
+ 
+    width: 50%;
+}
+.wrapDroite{
+  
+    width: 50%;
 }
