--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -1,4 +1,6 @@
-
+ul{
+    padding: 0;
+}
 
 .contener{
     background-color: #f1f1f1;
@@ -16,7 +18,7 @@
     margin:0;
     display: flex;
     justify-content: space-between;
-    width:93%;
+    width:95%;
     color: #f1f1f1;
     font-family: Montserrat;
     font-size: 18px;
@@ -25,11 +27,8 @@
     letter-spacing: 0em;
     text-align: left;
     align-items: center;
-    padding-left: 4%;
+    padding-left: 2%;
     border-radius:10px;
-
-
-    
 }
 .flesh{
     width: 20px;
@@ -48,14 +47,13 @@
     letter-spacing: 0em;
     text-align: left;
     color: #ff6060;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin:0%;
     animation: expand 1s ease-in-out;
     overflow: hidden;
     list-style-type: none;
     background-color: #f1f1f1;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
 }
 
 .WrapAbout{
