--- a/src/pages/Accomodation/Accomodation.module.css
+++ b/src/pages/Accomodation/Accomodation.module.css
@@ -34,17 +34,13 @@
     
 }
 
-.listeEquipe{
-    color: #ff6060;
-    list-style-type: none;
-    flex-direction: row;
-    background-color: #f6f6f6;
-   
-}
-
 .wrapGauche{
  
     width: 50%;
+}
+.test{
+    margin: 0%;
+    list-style-type: none;
 }
 .wrapDroite{
   
