--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -18,7 +18,6 @@ ul{
     margin:0;
     display: flex;
     justify-content: space-between;
-    width:95%;
     color: #f1f1f1;
     font-family: Montserrat;
     font-size: 18px;
@@ -27,8 +26,10 @@ ul{
     letter-spacing: 0em;
     text-align: left;
     align-items: center;
-    padding-left: 2%;
+    padding-left: 15px;
+    padding-right: 15px;
     border-radius:10px;
+
 }
 .flesh{
     width: 20px;
