--- a/src/pages/APropos/Apropos.module.css
+++ b/src/pages/APropos/Apropos.module.css
@@ -1,6 +1,9 @@
 .wrapApropos{
     width: 80%;
     padding-bottom: 1%;
-    padding-top: 2%;
+    padding-top: 4%;
     margin-left: 10%;
+}
+.espacement{
+    margin-bottom: 140px;
 }
