alignement de la description et de l'equipement

--- a/src/components/Proprio/Proprio.module.css
+++ b/src/components/Proprio/Proprio.module.css
@@ -1,7 +1,8 @@
-.essai{
+.nom{
     display: flex;
     flex-direction: row;
-    
+    background-color: blue;
+    align-items: center;
 
 }
 .tiltelProprio{
@@ -9,4 +10,5 @@
 }
 .picturesProprio{
     width: 90px;
+    border-radius: 50%;
 }
