--- a/src/components/Proprio/Proprio.module.css
+++ b/src/components/Proprio/Proprio.module.css
@@ -1,14 +1,34 @@
+
 .nom{
     display: flex;
     flex-direction: row;
-    background-color: blue;
+
     align-items: center;
+    width: 139px;
+    padding-right: 18px;
 
 }
 .tiltelProprio{
    color: #ff6060;
+   margin: 0%;
+   padding-left: 25px;
 }
 .picturesProprio{
-    width: 90px;
+    width: 64px;
     border-radius: 50%;
+}
+.etoile{
+    display: flex;
+    flex-wrap: nowrap;
+   
+    
+}
+.starts{
+    padding-left: 28%;
+    margin: 0%;
+    flex-wrap: nowrap;
+    width: 100px;
+}
+.contenentimg{
+    margin: 0%;
 }
