--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -55,7 +55,6 @@ ul{
     padding-left: 15px;
     padding-bottom: 15px;
     padding-right: 15px;
-    height: 160px;
 }
 
 .WrapAbout{
@@ -71,3 +70,7 @@ ul{
     background-color: #f1f1f1;
     border-radius: 10px 10px 0px 0px;
 }
+.height400 {
+    height: 160px;
+  }
+  
