--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -46,3 +46,18 @@
      left: 20px;
      z-index: 1; 
 }
+
+@media screen and (max-width:767px){
+   .wrap{
+      background-color: white;
+   }
+   .imgCover{
+      width: 100%;
+      height: 270px;
+   
+   }
+   
+
+}
+
+
