ajout du compteur dans le carrousell et de la condition si le chemein n'est pas galerer pour ne pas avoir l'avertisement

--- a/src/components/Carrousell/Carrousell.module.css
+++ b/src/components/Carrousell/Carrousell.module.css
@@ -21,6 +21,13 @@
    right: 10%
 
 }
+.counter{
+  color: white;
+  position: absolute;
+  top: 504px;
+  color: white;
+  right: 50%;
+}
 
 
 @media screen and (max-width:767px){
