--- a/src/components/Proprio/Proprio.module.css
+++ b/src/components/Proprio/Proprio.module.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: flex-end;
+    margin-bottom: 11px;
    
     
 }
@@ -39,7 +40,6 @@
 .contenentimg{
     margin: 0%;
 }
-
 @media screen and (max-width:767px){
 .query{
     display: flex;
@@ -53,7 +53,9 @@
     padding-left: 0%;
     margin: 0%;
 }
-
+.etoille{
+    margin-bottom: 0px;
+}
 
 }
 
