--- a/src/pages/notfound/Notfound.module.css
+++ b/src/pages/notfound/Notfound.module.css
@@ -1,15 +1,17 @@
 .wrap {
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
+    margin-left: 10%;
 }
 
 
 .ImageEreure{
-    height: 263px;
-    width: 597px;
+    height: 400px;
+    width:400px;
    
 
 
@@ -39,4 +41,36 @@
 body{
     margin: 0%;
 
+}
+.break{
+    display: none;
+}
+
+@media screen and (max-width:767px){
+
+.MessageEreur{
+     
+
+    font-size: 26px;
+    line-height: 35px;
+    margin-bottom: 255px;
+    text-align: center;
+
+}
+.lien{  
+    font-size: 20px;
+   
+}
+.ImageEreure{
+    margin-top: 198px;
+    height: 100px;
+    width: 70%;
+   
+
+
+}
+.break{
+    display: block;
+}
+ 
 }
