--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 80%;
+    max-width: 1500px;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 5%;
@@ -66,7 +67,7 @@
    .imgCover{
       width:100%;
       height: 270px;
-      margin-bottom: 20px;
+      margin-bottom: 12px;
    
    }
 
