--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -69,8 +69,8 @@
     }
     .wrapNav{
 
-        padding-right: 3%;
-        padding-left: 3%;
+        padding-right: 24px;
+        padding-left: 24px;
      
     }
 
@@ -78,7 +78,7 @@
  @media screen and (max-width:360px){
    
    .logo{
-    width: 101px;
+    width: 100px;
    }
    .home{
     padding-right:12px;
