--- a/src/pages/APropos/Apropos.module.css
+++ b/src/pages/APropos/Apropos.module.css
@@ -7,3 +7,11 @@
 .espacement{
     margin-bottom: 140px;
 }
+@media screen and (max-width:912px){
+    .wrapApropos{
+        width: 89%;
+        padding-bottom: 1%;
+        padding-top: 4%;
+        margin-left: 3%;
+    }
+}
