--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -57,6 +57,41 @@
 /*  mediaquery tablette  */
 @media screen and (max-width:912px){
    .wrap{
+      background-color: #F6F6F6;
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+      margin-left: 5%;  
+      gap: 0px;
+   
+   }
+   .imgCover{
+      width:90%;
+      height: 270px;
+      margin-bottom: 40px;
+      margin-left: 5%;
+
+   }
+   .titleCover{
+     color: white;
+     font-size: 18px;
+     position: absolute;
+     bottom: 0;
+     left: 20px;
+     z-index: 1; 
+}
+.titleCover{
+   left: 47px;
+   
+}
+
+}
+
+
+
+/*  mediaquery smarte phone  */
+@media screen and (max-width:425px){
+   .wrap{
       background-color: white;
       display: flex;
       flex-direction: column;
@@ -68,14 +103,17 @@
       width:100%;
       height: 270px;
       margin-bottom: 12px;
+      margin-left: 0;
    
    }
 
+   .titleCover{
+      left: 20px;
+   
+ }
+
 }
 
-
-
-/*  mediaquery smarte phone  */
 
 
 
