--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -5,7 +5,7 @@ ul{
 .contener{
     background-color: #f1f1f1;
     margin: 25px;
-    border-radius: 10px 10px 0 0 ;
+    border-radius: 10px;
 
 }
 .TitleContener{
@@ -72,7 +72,7 @@ ul{
     border-radius: 10px 10px 0px 0px;
 }
 .height400 {
-    height: 160px;
+    height: 235px;
   }
   @media screen and (max-width:912px){
     .contener{
