--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -69,8 +69,8 @@
     }
     .wrapNav{
 
-        padding-right: 24px;
-        padding-left: 24px;
+        padding-right: 14px;
+        padding-left: 14px;
      
     }
 
@@ -82,6 +82,9 @@
    }
    .home{
     padding-right:12px;
+   }
+   .apropo{
+    margin-left: 0%;
    }
 
 
