j'ai enlever la props pour la taille des colapse elle n'avait pas d'interer pour un sites dynamique

--- a/src/pages/Accomodation/Accomodation.module.css
+++ b/src/pages/Accomodation/Accomodation.module.css
@@ -104,8 +104,13 @@
     display: flex;
     flex-direction: row;
     width: 105%;
-}
 
+}
+.tentative{
+    display: flex;
+    flex-direction: row;
+ 
+}
 @media screen and (max-width:912px){
 
 
