--- a/src/components/Carrousell/Carrousell.module.css
+++ b/src/components/Carrousell/Carrousell.module.css
@@ -8,18 +8,23 @@
   width: 100%;
   border-radius: 25px;
   object-fit: cover;
+ 
 }
-
+.photoCarousel:focus-visible{
+  outline: none;
+}
 .buttonLeft{
     top: 295px;
     position: absolute;
     left: 10%;
+    z-index: 5;
 }
+
 .buttonRight{
    top: 295px;
    position: absolute;
-   right: 10%
-
+   right: 10%;
+   z-index: 5;
 }
 .counter{
   color: white;
