--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -75,6 +75,23 @@
     }
 
  }
+
+ @media screen and (min-width: 769px) and (max-width: 940px) {
+
+    .wrapNav{
+
+        padding-right: 93px;
+        padding-left: 90px;
+     
+    }
+
+    .imgCover{
+      width: 274px;
+      height:274px;
+    }
+    
+ }
+ 
  @media screen and (max-width:360px){
    
    .logo{
