--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -69,8 +69,8 @@
     }
     .wrapNav{
 
-        padding-right: 14px;
-        padding-left: 14px;
+        padding-right: 3%;
+        padding-left: 3%;
      
     }
 
