reglage ecrens tres grand et reglage baniener texte qui colle plus a figma

--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -83,7 +83,14 @@ ul{
         border-radius: 5px;
      
         
-     }
+    
+      }
+      .descript{
+
+        padding-bottom: 52px;
+
+    
+    }
 
   }
 
