ajout de fontawsomme et reglage nom padding

--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -4,8 +4,8 @@ ul{
 
 .contener{
     background-color: #f1f1f1;
-    margin: 25px;
     border-radius: 10px;
+    margin-bottom: 25px;
 
 }
 .TitleContener{
@@ -83,14 +83,7 @@ ul{
         border-radius: 5px;
      
         
-    
-      }
-      .descript{
-
-        padding-bottom: 52px;
-
-    
-    }
+     }
 
   }
 
