--- a/src/components/Proprio/Proprio.module.css
+++ b/src/components/Proprio/Proprio.module.css
@@ -59,6 +59,7 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 12px;
 }
 
 .etoilePlein{
