--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -28,10 +28,15 @@ ul{
     padding-left: 15px;
     padding-right: 15px;
     border-radius:10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 
 }
+.descriptTitle:hover{
+  cursor: pointer;
+}
 .flesh{
-    width: 20px;
+    font-size: 27px;
 }
 
 
