--- a/src/components/Carrousell/Carrousell.module.css
+++ b/src/components/Carrousell/Carrousell.module.css
@@ -13,13 +13,21 @@
 .photoCarousel:focus-visible{
   outline: none;
 }
+.photoCarousel:hover{
+  cursor: pointer;
+}
 .buttonLeft{
     top: 275px;
     position: absolute;
     left: 10%;
     z-index: 5;
 }
-
+.buttonLeft:hover{
+  cursor: pointer;
+}
+.buttonRight:hover{
+  cursor: pointer;
+}
 .buttonRight{
    top: 275px;
    position: absolute;
@@ -30,8 +38,8 @@
   color: white;
   position: absolute;
   top: 489px;
-  color: white;
   right: 50%;
+  
 }
 
 @media screen and (max-width:768px){
@@ -63,7 +71,7 @@
 }
 
 .counter{
-  top: 455px;
+  top: 440px;
   right:47%;
 }
 
@@ -100,7 +108,7 @@
 }
 
 .counter{
-  top: 340px;
+  top: 327px;
   right:47%;
 }
 
