--- a/src/pages/notfound/Notfound.module.css
+++ b/src/pages/notfound/Notfound.module.css
@@ -51,20 +51,23 @@ body{
 .MessageEreur{
      
 
-    font-size: 26px;
+    font-size: 18px;
     line-height: 35px;
-    margin-bottom: 255px;
+    margin-bottom: 133px;
     text-align: center;
 
 }
 .lien{  
-    font-size: 20px;
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 235px;
    
 }
 .ImageEreure{
     margin-top: 198px;
     height: 100px;
     width: 70%;
+
    
 
 
