reglage probleme de du conter qui boujais et j'ai enlever axios et mon carrouselle react slick sniff sniff a cause des réstriction

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -82,6 +82,9 @@ filter: brightness(74%);
 
     .title{
         font-size: 20px;
+        display: flex;
+        justify-content: flex-start;
+        padding-right: 5px;
      }
  }
  
