--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -27,7 +27,6 @@
    top: 0px;
    border-radius: 10px;
    object-fit: cover;
-   mix-blend-mode: darken;
    filter: brightness(85%);
    margin-bottom: 30px;
    transition: transform 0.2s;
@@ -39,10 +38,12 @@
    box-shadow: 1px 1px 12px #ff6060;
    transition: 0.5s;
    transform: scale(1.02);
+   object-fit: cover;
    
 
 }
 
+     
 
 
 .titleCover{
