--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,7 +13,8 @@
     align-items: center;
     padding-right: 10%;
     padding-left: 10%;
-    padding-top: 2%;
+    padding-top: 0;
+    margin-top: 15px;
 }
 .home{
     padding-right: 25px;
