--- a/src/pages/Accomodation/Accomodation.module.css
+++ b/src/pages/Accomodation/Accomodation.module.css
@@ -195,3 +195,13 @@
 }
 }
 
+
+
+
+@media screen and (max-width:425px){
+
+    .listCartier{
+        width:84px;
+        font-size: 10px;
+    }
+}
