--- a/src/components/Colapse/Colapse.module.css
+++ b/src/components/Colapse/Colapse.module.css
@@ -90,6 +90,12 @@ ul{
      
         
      }
+     .descriptTitle{
+      font-size: 17px;
+     }
+     .descript{
+      font-size: 14px;
+     }
 
   }
 
